@@ -13,6 +13,7 @@
  *
  * Copyright 2006-2008 Sun Microsystems, Inc.
  * Portions Copyright 2014-2016 ForgeRock AS.
+ * Portions Copyright 2026 3A Systems, LLC.
  */
 package org.opends.server.core;
 
@@ -330,7 +331,7 @@ public class PasswordValidatorConfigManager
            definition.getJavaClassPropertyDefinition();
       Class<? extends PasswordValidator> validatorClass =
            propertyDefinition.loadClass(className, PasswordValidator.class);
-      PasswordValidator<T> validator = validatorClass.newInstance();
+      PasswordValidator<T> validator = validatorClass.getDeclaredConstructor().newInstance();
 
       if (initialize)
       {
